Add Discussion and Conclusions section of CM1 paper, along with the rest of the figures.

--- a/modeling.tex
+++ b/modeling.tex
@@ -184,6 +184,186 @@ The addition of radiation (Fig.~\ref{fig:stab-48-72}f) provided the extra forcin
 Outside of the 120-km radius, the region of radiative forcing for stabilization sloped downward, and the increase in $N^2$ observed near 18 km can be explained entirely by a combination of advection and vertical turbulence.
 
 %---------------------------------------------------------------------------------------%
+\section{Discussion}
+%---------------------------------------------------------------------------------------%
+  \subsection{The role of advection}
+
+Advection played an important role in the tropopause-layer $N^2$ evolution at all stages of intensification, but for brevity, this section will focus only on the RI (24-48-hour) period.
+To investigate the advective processes more closely, the individual contributions of horizontal and vertical advection during the RI period are shown in Fig.~\ref{fig:adv-24-48}, along with the corresponding time-mean radial and vertical velocities and $\theta$.
+The $N^2$ tendencies due to the two advective components (Fig.~\ref{fig:adv-24-48}a,b) exhibited strong cancellation, consistent with flow that was nearly isentropic.
+There existed, however, a large region near the tropopause in which the total advective tendency was nonzero (Fig.~\ref{fig:stab-24-48}b).
+These nonzero tendencies were related to the development of the TC's secondary circulation as the storm intensified.
+
+%The eye was characterized by stabilization below 16 km and destabilization in the 16-17-km and 18-19-km layers.
+%Comparing Fig.~\ref{fig:stab-24-48}b to \ref{fig:adv-24-48}a,b reveals that the stabilization below 16 km in the eye was forced by vertical advection, as was the region of destabilization in the 18-19-km layer.
+%Meanwhile, the destabilization that occurred in the 16-17-km layer was forced by a combination and radial and vertial advection.
+
+%Outside of the eye, the layer below about 15.5 km was dominated by stabilization.
+%Outside of the 50-km radius, horizontal advection provided the forcing for this stabilization, while inside of the 50-km radius, vertical advection was responsible.
+%Above this layer existed a layer of destabilization near the 16-km level, which was forced by horizontal advection.
+
+
+%Some insight can be gained by considering the time tendency of the vertical $\theta$ gradient due to advection:
+%   \begin{equation} \label{eq:advtend}
+%   \left(\frac{\partial}{\partial t}\frac{\partial \theta}{\partial z}\right)_{adv} = -u\frac{\partial}{\partial r}\frac{\partial \theta}{\partial z}-w\frac{\partial}{\partial z}\frac{\partial \theta}{\partial z}-\frac{\partial u}{\partial z}\frac{\partial \theta}{\partial r}-\frac{\partial w}{\partial z}\frac{\partial \theta}{\partial z}.
+%   \end{equation}
+
+%The first two terms on the right-hand side of Eq. \ref{eq:advtend} represent advection of static stability by the radial and vertical wind, respectively.
+%These terms cannot create a maximum or a minimum; they only act to rearrange the static stability field.
+%Since the goal of this analysis is to understand the processes responsible for the creation of maxima and minima in $N^2$, these two terms will not be examined.
+%The third and fourth terms represent, respectively, the tilting of isentropes in the presence of vertical wind shear, and the spreading or compaction of isentropes through divergence of the vertical wind.
+%Since these terms involve gradients of velocities, they can create or eliminate local maxima or minima in static stability.% This section will focus on these two terms.
+
+%  \paragraph{0-24 hours}
+%During the first day of the simulation, horizontal advection (Fig.~\ref{fig:adv-00-24}a) generally forced a decrease in $N^2$ below 17 km and an increase in $N^2$ above.
+%The mean radial velocity during this period (Fig.~\ref{fig:adv-00-24}c) reveals a region of outflow at and below 17 km and near-zero radial velocity above, with a layer of strong vertical wind shear straddling the tropopause.
+%The slight downward slope with radius of the $\theta$ surfaces near the tropopause (i.e. $\partial\theta/\partial r > 0$), together with strong vertical wind shear ($\partial u/\partial z < 0$) in this layer, acts to force an increase in the vertical gradient of $\theta$ above 17 km through the third term on the right-hand side of Eq. \ref{eq:advtend}.
+%This negative $\theta$ tendency must decrease with height within the region of strong vertical wind shear and approach zero as the radial velocity diminishes to zero near 17 km.
+%These tendencies thus yielded an increase in the vertical gradient of $\theta$ above 17 km, which implies an increase in $N^2$, as was seen in Fig.~\ref{fig:adv-00-24}a.
+%Note that although the radial gradient of $\theta$ was stronger in the 15-16-km layer than it was closer to the tropopause, the vertical shear of the radial wind was much smaller there, yielding a smaller $N^2$ tendency due to horizontal advection.
+%
+%Notably, there existed strong $N^2$ tendencies due to horizontal advection inside of the 30-km radius even though the mean radial velocity in that region was near zero.
+%Close examination of the radial velocity at each output time step reveals the presence of inward-propagating waves in the lower stratosphere.
+%These waves amplified upon reaching r=0 and forced strong but highly transient $\theta$ tendencies due to advective processes.
+%Thus, although the radial velocity perturbations associated with these waves averaged out to zero, the non-linear effect of these waves on the $N^2$ field remained.
+%
+%The $N^2$ tendencies forced by horizontal advection were completely canceled out by vertical advective tendencies (\ref{fig:adv-00-24}b).
+%As was seen in Fig.~\ref{fig:stab-00-24}b, the sum of the two terms yielded a layer of increasing $N^2$ below 17 km and decreasing $N^2$ above, meaning that vertical advective processes dominated the $N^2$ tendency during the initial spin-up period.
+%Most of the upper troposphere contained mean ascent during this time, with the magnitude of the ascent decreasing with height.
+%This decrease in upward motion with height forces a convergence of isentropic surfaces, which implies a positive $N^2$ tendency in this region, as was observed in Fig.~\ref{fig:adv-00-24}b.
+%Some weak descent at and just above the tropopause, meanwhile, forces a slight divergence of isentropes in the 17-18-km layer and a concomitant decrease in $N^2$.
+%Surprisingly, the 0-20-km radius was characterized by mean ascent, even up to the 21-km level.
+%Inward-propagating waves, upon reaching r=0, induced dipoles of strong upward and downward vertical motion.
+%For reasons that remain unclear, the regions of ascent tended to last longer than the regions of subsidence induced by these waves, which is responsible for the dominance of ascent in the mean.
+%In this region of mean ascent, changes in the vertical gradint of mean vertical velocity are responsible for alternating regions of positive and negative $N^2$ tendencies.
+%
+%HOVMOLLER OF w IN THE LOWER STRATOSPHERE??
+
+%   \paragraph{RI period: 24-48 hours}
+During the RI period, strong radial and vertical circulations developed near the tropopause (Fig.~\ref{fig:adv-24-48}c,d), which forced high-magnitude $N^2$ tendencies due to advection (Fig.~\ref{fig:adv-24-48}a,b).
+A layer of strong outflow formed at and below the tropopause during this period, with the outflow maximum (dashed cyan line) curving from the 14-km level at the 50-km radius to just below the 16-km level outside of the 80-km radius (Fig.~\ref{fig:adv-24-48}c).
+%The cyan line, by definition, represents the level at which the vertical gradient of radial velocity switched signs, with $\partial u/\partial z>0$ below the line and $\partial u/\partial z<0$ above.
+Notably, the $N^2$ tendency due to horizontal advection (Fig.~\ref{fig:adv-24-48}a) tended to switch signs at this line, with stabilization below the outflow maximum and destabilization above.
+%This suggests that vertical wind shear above and below the outflow maximum played an important role in the $N^2$ tendency during this time.
+%Examination of the third term on the right-hand side of Eq. \ref{eq:advtend} suggests that tilting of isentropes within these shear layers contributed to the strong $N^2$ tendencies that flanked the outflow maximum.
+This is consistent with the outflow layer carrying air with increasingly large $\theta$ from the eyewall to large radii as the storm intensified.
+This increase in $\theta$ maximized near the outflow maximum, which acted to decrease $\partial \theta/\partial z$ above the outflow maximum and increase it below.
+%Outside of the eye and eyewall, isentropes generally sloped upward with radius.
+%Vertical wind shear acting on these upward-sloping isentropes should act to tilt them into the vertical above the outflow maximum, thereby decreasing $\partial \theta/\partial z$, and tilt them to be more horizontal below the outflow maximum, thereby increasing $\partial \theta/\partial z$.
+This mechanism is the same as that discussed in \cite{TrierSharman}, in which vertical wind shear in the outflow layer of a mesoscale convective system modified the upper-tropospheric static stability through differential advection of isentropes.
+%Thus, wherever $\partial u/\partial z>0$, the tilting term must force an increase in $N^2$, and wherever $\partial u/\partial z<0$, the tilting term must force a decrease in $N^2$, which is precisely the structure seen in Fig.~\ref{fig:adv-24-48}a.
+
+%Advection of $N^2$ by the radial wind (first term on the right-hand side of Eq. \ref{eq:advtend}) also acted within the outflow jet.
+%For example, horizontal advection provided forcing for destabilization at the 16-km level almost everywhere inside of the 140-km radius.
+%Outside of this radius near 16 km, however, existed a region of forcing for stabilization.
+%This switch in signs was a consequence of a reversal of the radial graident of mean $N^2$ near the 140-km radius (Fig.~\ref{fig:n2-24hr-avgs}b).
+%Inside of that radius, $(\partial/\partial r)(\partial \theta/\partial z) > 0$ and $u > 0$, which corresponds to forcing for destabilization in Eq. \ref{eq:advtend}; outside of that radius $(\partial/\partial r)(\partial \theta/\partial z) < 0$ and $u > 0$, which corresponds to forcing for stabilization.
+%
+%The relative imporance of the first and third terms on the right-hand side of Eq. \ref{eq:advtend} is difficult to ascertain, but the structure of the mean radial velocity, $\theta$, and $N^2$ fields suggests that both terms are contributing within the outflow layer.
+
+Meanwhile in the lower stratosphere, a thin layer of 2-4 m s\textsuperscript{-1} inflow developed a few hundred meters above the tropopause, similar to that which was observed in Hurricane Patricia (2015; \citeauthor{DuranMolinari2018} \citeyear{DuranMolinari2018}) and in previous modeling studies (e.g. \citeauthor{OhnoSatoh2015} \citeyear{OhnoSatoh2015}; \citeauthor{Kieuetal} \citeyear{Kieuetal}).
+Since the isentropes in this layer sloped slightly upward with radius (i.e. $\partial \theta/\partial r < 0$), this inflow acted to import lower $\theta$ air from outer radii to inner radii.
+%There also existed strong radial gradients of mean $N^2$ in this layer during this time (Fig.~\ref{fig:n2-24hr-avgs}b), so the inflow layer must have acted to rearrange $N^2$.
+%This rearrangement could not have been responsible for the overall increase in $N^2$ during this period, however.
+%If horizontal advection contributed to the strengthening stable layer just above the tropopause, it must have been through the tilting term.
+%The inflow maximum near the 18-km level represents the level at which the sign of $\partial u/\partial z$ reverses, with $\partial u/\partial z < 0$ below and $\partial u/\partial z > 0$ above.
+%The third term on the right-hand side of Eq. \ref{eq:advtend} shows that the tilting of isentropes should act to destabilize the layer below the inflow maximum and stabilize the layer above, which is precisely what was observed outside of the 80-km radius in Fig.~\ref{fig:adv-24-48}a.
+Since the negative $\theta$ tendencies maximized at the level of maximum inflow, the layer below the inflow maximum destabilized and the layer above stabilized (Fig.~\ref{fig:adv-24-48}a).
+
+Curiously, horizontal advection contributed to the $N^2$ tendency everywhere within the eye, even though the mean radial velocity there was near zero.
+Close examination of the model output revealed that these tendencies were forced by advective processes associated with inward-propagating waves.
+%Close examination of the model output revealed that this mean ascent was forced by the interaction of inward-propagating waves with the boundary at r=0.
+Although the radial velocity perturbations induced by these waves averaged out to zero, the advective tendencies forced by the radial velocity perturbations did not.
+Additionally, when these waves reached r=0, a dipole of vertical velocity resulted, with ascent above and descent below.
+For reasons that remain unclear, the regions of ascent were more persistent than the regions of descent, which resulted in the mean ascent observed near r=0 above 17 km in Fig.~\ref{fig:adv-24-48}d.
+
+Vertical advection also played an important role in the tropopause-layer static stability evolution.
+Within the eye, subsidence dominated below 17 km, while mean ascent existed near the storm center above 17 km.
+Although the magnitude of the subsidence was larger at lower altitudes, $\partial \theta/\partial z$ was smaller there.
+Because $\partial \theta/\partial z$ was smaller, the subsidence at lower levels could not accomplish as much warming as the subsidence at higher levels in the eye, consistent with the results of \cite{SternZhang2013}.
+As a result, vertical advection within the eye stabilized the layer below 16 km during RI.
+
+Outside of the 27-km radius, ascent dominated the troposphere, while a 1-1.5-km-deep layer of descent existed immediately above the tropopause.
+These regions of ascent and descent converged just above the tropopause; this convergence acted to compact the isentropes in this layer and increase the static stability.
+Above the lower-stratospheric subsidence maximum, meanwhile, vertical advection decreased $N^2$.
+Below the tropopause, differential vertical advection increased $N^2$ within the eyewall region and also at larger radii above the vertical velocity maximum at larger radii.
+Outside of the eyewall and below the vertical velocity maximum, meanwhile, differential vertical advection acted to decrease $N^2$.
+
+Comparing the $N^2$ tendencies forced by horizontal (Fig.~\ref{fig:adv-24-48}a) and vertical (Fig.~\ref{fig:adv-24-48}b) advection to the total advective tendency seen in Fig.~\ref{fig:stab-24-48}b reveals that horizontal advective tendencies dominated the troposphere, while vertical advective tendencies dominated the layer near and above the tropopause.
+Thus, tilting of isentropes in the vicinity of the upper-tropospheric outflow maximum appears to be the most important advective process governing the $N^2$ tendency in the troposphere, whereas convergence of vertical velocity appears to be the most important advective process near the tropopause.
+
+
+  \subsection{The role of radiation}
+During the initial spin-up period (0-24 hours; Fig.~\ref{fig:qi+radten}a), convection was not deep enough to deposit large quantities of ice near the tropopause and create a persistent cirrus canopy.
+Due to the lack of ice particles, the radiative heating tendencies during this period (Fig.~\ref{fig:qi+radten}b) were relatively small and confined to the region above a few particularly strong, although transient, convective towers.
+During RI (24-48 hours), the eyewall updraft strengthened and a radially-extensive cirrus canopy developed near the tropopause (Fig.~\ref{fig:qi+radten}c).
+The enhanced vertical gradient of ice mixing ratio at the top of the cirrus canopy induced strong diurnal-mean radiative cooling near the tropopause (Fig.~\ref{fig:qi+radten}d).
+This cooling exceeded 0.6 K h\textsuperscript{-1} (14.4 K day\textsuperscript{-1}) in some places and sloped downward from the lower stratosphere into the upper troposphere, following the top of the cirrus canopy.
+A small radiative warming maximum also appeared outside of the 140-km radius below this region of cooling.
+These results broadly agree with those of \citeauthor{Buetal} (\citeyear{Buetal}; see their Fig. 11a), whose CM1 simulations produced a 0.3 K h\textsuperscript{-1} diurnally-averaged radiative cooling at the top of the cirrus canopy and radiative warming within the cloud that maximized near the 200-km radius.
+This broad region of radiative cooling acted to destabilize the layer below the cooling maximum and stabilize the layer above, which can be seen in Fig.~\ref{fig:stab-24-48}d.
+The small area of net radiative heating outside of the 140-km radius enhanced the destabilization above 16 km in this region and produced a thin layer of stabilization in the 15-16-km layer.
+
+After the TC's RI period completed (48-72 hours), strong radiative cooling remained near the tropopause at inner radii (Fig.~\ref{fig:qi+radten}f), sloping downward with the top of the cirrus canopy to below the tropopause at outer radii.
+Cooling rates exceeded 1 K h\textsuperscript{-1} (24 K day\textsuperscript{-1}) just above the tropopause between the 30- and 70-km radii.
+This value is more than three times the maximum cooling rate of 0.3 K h\textsuperscript{-1} observed by \cite{Buetal}, a difference that is a consequence of their larger vertical grid spacing compared to that used here, along with a contribution from differing radiation schemes.
+%\cite{Buetal} employed the NASA-Goddard radiation scheme in their CM1 simulations, whereas RRTMG is used in the present paper.
+To compare our results to theirs, we ran a simulation identical to that described in Section 2, except using the NASA-Goddard radiation scheme and 625-m vertical grid spacing, to match those of \cite{Buetal}.
+This simulation produced a maximum 24-hour-average radiative cooling rate of 0.3 K h\textsuperscript{-1}, which agrees with that shown in \cite{Buetal}.
+Another simulation using 625-m vertical grid spacing and RRTMG radiation produced 24-hour-average cooling rates of up to 0.6 K h\textsuperscript{-1}.
+This suggests that vertical grid spacing smaller than 625 m is necessary to resolve properly the radiative cooling at the top of the cirrus canopy, and that the results can be quite sensitive to the radiation scheme used.
+
+Meanwhile below the tropopause, time-mean radiative warming spread from 30- to 160-km radius within the cirrus canopy.
+The existence of radiative cooling overlying radiative warming in this region led to radiatively-forced destabilization at and below the tropopause, as was observed in Fig.~\ref{fig:stab-48-72}d.
+Beneath the warming layer existed a region of forcing for stabilization, while a much stronger region of forcing for stabilization existed in the lower stratosphere, above the cooling maximum.
+
+The results herein suggest that, after the cirrus canopy developed, radiative heating tendencies considerably destabilized the upper troposphere and stabilized the lower stratosphere.
+
+  \subsection{The role of turbulent mixing}
+
+%An interesting result of the budget analysis was that turbulent mixing acted to increase static stability in some regions of the storm.
+%Although vertical turbulence always acts to eliminate vertical gradients of $\theta$, this adjustment toward a neutral state only occurs where the mixing takes place.
+Fig.~\ref{fig:schematic} depicts the effect of turbulent mixing on the vertical $\theta$ profile of an initially stably-stratified layer.
+At the initial time in this schematic, $\theta$ is assumed to increase with height at a constant rate (Fig.~\ref{fig:schematic}, left panel).
+The imposition of turbulence (blue hatching) adjusts the $\theta$ profile within the mixed layer toward a constant value equal to the mean value of that layer in the initial state (Fig.~\ref{fig:schematic}, right panel).
+%If turbulence occurs in a stably-stratified layer, it will act to decrease $\theta$ at the top of the layer and increase it at the bottom.
+Just above and just below the mixed layer, however, the $\theta$ profile remains undisturbed.
+Consequently, although turbulent mixing acts to decrease $\partial \theta/\partial z$ in the layer in which it is occurring, it actually increases $\partial \theta/\partial z$ just below and just above the layer.
+Vertical gradients of turbulent mixing like those depicted here are quite important, particularly on the flanks of the upper-tropospheric outflow jet.
+
+Two distinct maxima of vertical eddy diffusivity developed in the tropopause layer as the storm intensified (Fig.~\ref{fig:diff}).
+Comparison of these turbulent regions to the $N^2$ tendencies in Figs. \ref{fig:stab-24-48}c and \ref{fig:stab-48-72}c reveals that the layers in which vertical eddy diffusivity maximized corresponded to layers of destabilization due to vertical turbulence.
+Just outside of these layers, however, vertical turbulence acted to increase $N^2$.
+The large vertical gradient of vertical eddy diffusivity near the tropopause played an important role in developing the lower-stratospheric stable layer during RI.
+These results support the hypothesized role of turbulence in setting the outflow-layer $\theta$ stratification in \cite{RotunnoEmanuel}.
+
+  \section{Conclusions}
+The simulated $N^2$ evolution shown herein closely matched that observed during the RI of Hurricane Patricia (2015).
+Three $N^2$ budget terms dominated in the upper troposphere and lower stratosphere: advection, radiation, and vertical turbulence.
+Advection dominated within the eye, where it provided forcing for destabilization.
+Radiation and vertical turbulence played particularly important roles in developing the strong $N^2$ maximum just above the cold-point tropopause during RI.
+
+To put the $N^2$ variability observed near the tropopause into context, Fig.~\ref{fig:fulltrop} depicts the model change in $N^2$ over the RI period (hours 24-48) from 0 to 21 km altitude, along with the vertical eddy diffusivity and the radiative heating rate.
+The largest changes in $N^2$ occurred in a relatively shallow layer immediately surrounding the tropopause (Fig.~\ref{fig:fulltrop}a).
+This shallow layer also contained the largest diurnally-averaged radiative heating tendencies found anywhere in the domain (Fig.~\ref{fig:fulltrop}c).
+%The largest diurnally-averaged radiative heating tendencies found anywhere in the domain also were contained within this relatively shallow layer (Fig.~\ref{fig:fulltrop}c).
+Values of vertical eddy diffusivity larger than any found outside of the boundary layer also resided in the upper troposphere (Fig.~\ref{fig:fulltrop}b).
+%The upper troposphere also contained a deep layer of vertical eddy diffusivity values larger than those found anywhere outside of the boundary layer.
+The results herein suggest that this turbulence not only develops as a response to the presence of small static stability and large vertical wind shear, as discussed by \cite{Molinarietal} and \cite{DuranMolinari2016}, but also can actively increase the static stability in highly localized regions just above and below the mixed layers.
+
+Since two of the most important processes contributing to the $N^2$ variability are parameterized, and one (radiation) closely depends on yet another parameterized process (microphysics), the tropopause-layer $N^2$ variability could be quite sensitive to the assumptions inherent to the parameterizations used.
+A better understanding of the microphysical characteristics of the TC cirrus canopy, its interaction with radiation, and outflow-layer turbulence is critical to understanding the tropopause-layer $N^2$ evolution.
+
+%A number of sensitivity experiments revealed that the details of the $N^2$ evolution were sensitive to the selection of the radiation scheme, the vertical turbulence length scale, and the vertical grid spacing.
+%All of the simulations, however, did develop an elevated tropopause over the eye that corresponded to decreasing static stability and, outside of the eye, an $N^2$ maximum immediately above the tropopause.
+
+%Comparison to previous work revealed that small vertical grid spacing is necessary to resolve the shallow layer of radiative cooling at the top of the cirrus canopy.
+%Increasing the vertical grid spacing decreased the magnitude of the radiative cooling and produced a weaker, but deeper lower-stratospheric stable layer.
+
+In this paper, all of the variables were averaged over a full diurnal cycle to eliminate the effects of diurnal variability and isolate the overall storm evolution.
+Diurnal variations in static stability near the tropopause are potentially of interest with respect to the tropical cyclone diurnal cycle, and will be the subject of future work.
+
+%---------------------------------------------------------------------------------------%
 %FIGURES
 %---------------------------------------------------------------------------------------%
 %FIGURE 1%
@@ -243,3 +423,80 @@ Orange lines represent the cold-point tropopause height averaged over the 0-24-h
 \caption{As in Fig.~\ref{fig:stab-00-24}, but for the 48-72-hour period.}
 \label{fig:stab-48-72}
 \end{figure*}
+
+%FIGURE 8%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=39pc]{figures/h024-h048-adv.png}}
+\caption{The contributions to the change in $N^2$ over the 24-48-hour period (10\textsuperscript{-4} s\textsuperscript{-2} (24 h)\textsuperscript{-1}) by (a) horizontal advection and (b) vertical advection. (c) The radial velocity (m s\textsuperscript{-1}; filled contours), potential temperature (K; thick black contours), cold-point tropopause height (orange line), and level of maximum outflow (dashed cyan line) averaged over the 24-48-hour period. (d) The vertical velocity (cm s\textsuperscript{-1}; filled contours), potential temperature (K; thick black contours), and cold-point tropopause height (orange line) averaged over the 24-48-hour period.}
+%\caption{As in Fig. \ref{fig:adv-00-24}, but for the 24-48-hour period.}
+\label{fig:adv-24-48}
+\end{figure*}
+
+%FIGURE 9%
+%\begin{figure*}[ht]
+%\centerline{\includegraphics[width=39pc]{figures/w.png}}
+%\caption{Vertical velocity (cm s\textsuperscript{-1}; filled contours), potential temperature (K; thick black contours), and cold-point tropopause height (orange lines) averaged over (a) 0-24 hours, (b) 24-48 hours, and (c) 48-72 hours.}
+%\label{fig:w}
+%\end{figure*}
+
+%FIGURE 10%
+%\begin{figure*}[ht]
+%\centerline{\includegraphics[width=39pc]{figures/h048-h072-adv.png}}
+%\caption{As in Fig. \ref{fig:adv-00-24}, but for the 48-72-hour period.}
+%\label{fig:adv-48-72}
+%\end{figure*}
+
+%FIGURE 9%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=39pc]{figures/qi+radten.png}}
+\end{figure*}
+\begin{figure}
+\caption{Ice mixing ratio (g kg\textsuperscript{-1}) and cold-point tropopause height (orange lines) averaged over (a) 0-24 hours, (c) 24-48 hours, and (e) 48-72 hours. Radiative heating rate (K h\textsuperscript{-1}) and cold-point tropopause height (orange lines) averaged over (b) 0-24 hours, (d) 24-48 hours, and (f) 48-72 hours.}
+\label{fig:qi+radten}
+\end{figure}
+
+%FIGURE 10%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=39pc]{figures/Schematic2.png}}
+   \caption{Schematic diagram of the effect of turbulent mixing on the vertical profile of potential temperature ($\theta$). At the initial time (left panel), potential temperature is assumed to increase with height at a constant rate (thick black line). The imposition of turbulence within a portion of the layer (blue hatching) adjusts the potential temperature profile toward the mean initial value of that layer. After a period of mixing (right panel) the potential temperature in the mixed layer does not vary with height, but just above and just below the mixed layer, it rapidly increases with height.}
+\label{fig:schematic}
+\end{figure*}
+
+%FIGURE 11%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=39pc]{figures/khvten.png}}
+\caption{Vertical eddy diffusivity (m\textsuperscript{2} s\textsuperscript{-2}; filled contours), cold-point tropopause height (cyan lines), and radial velocity (m s\textsuperscript{-1}; thick black lines) averaged over (a) 0-24 hours, (b) 24-48 hours, and (c) 48-72 hours.}
+\label{fig:diff}
+\end{figure*}
+
+%FIGURE 12%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=19pc]{figures/fulltrop.png}}
+\end{figure*}
+\begin{figure}
+\caption{(Top panel) Change in $N^2$ over the 24-48-hour period (10\textsuperscript{-4} s\textsuperscript{-2} (24 h)\textsuperscript{-1}) directly output by the model for the 0-21-km layer. (Middle panel) Vertical eddy diffusivity (m\textsuperscript{2} s\textsuperscript{-2}) averaged over the same time period. (Bottom panel) Radiative heating rate (K h\textsuperscript{-1}) averaged over the same time period.}
+\label{fig:fulltrop}
+\end{figure}
+
+%%FIGURE A1%
+%\begin{figure*}[ht]
+%\centerline{\includegraphics[width=39pc]{figures/n2-1000km.png}}
+%\appendcaption{A1}{Twenty-four-hour averages of squared Brunt-V{\"a}is{\"a}l{\"a} frequency ($N^2$; 10\textsuperscript{-4} s\textsuperscript{-2}) over (a) 0-24 hours, (b) 24-48 hours, (c) 48-72 hours, and (d) 72-96 hours for the simulation described in Appendix Aa. Orange lines represent the cold-point tropopause height averaged over the same time periods.}
+%\label{fig:n2-1000km}
+%\end{figure*}
+%
+%%FIGURE A2%
+%\begin{figure*}[ht]
+%\centerline{\includegraphics[width=39pc]{figures/turb-50m.png}}
+%\appendcaption{A2}{The contribution of vertical turbulence to the $N^2$ variability (10\textsuperscript{-4} s\textsuperscript{-2} (24 h)\textsuperscript{-1}) averaged over (a) 0-24 hours, (b) 24-48 hours, (c) 48-72 hours, and (d) 72-96 hours for the simulation described in Appendix Ab. Orange lines represent the cold-point tropopause height averaged over the same time periods.}
+%\label{fig:turb-50m}
+%\end{figure*}
+
+%\begin{figure}[t]
+%\begin{figure}[t]
+%\begin{figure}[t]
+%  \noindent\includegraphics[width=19pc,angle=0]{figure01.pdf}\\
+%  \caption{Enter the caption for your figure here.  Repeat as
+%  necessary for each of your figures. Figure from \protect\cite{Knutti2008}.}\label{f1}
+%\end{figure}
+
