Create patricia.tex and add the Indroduction and Data & Methods sections, along with Figure 1 and Table 1.

--- a/aux_files/references.bib
+++ b/aux_files/references.bib
@@ -92,10 +92,28 @@ title={Office of {N}aval {R}esearch {T}ropical {C}yclone {I}ntensity ({TCI}) 201
 year={2016},
 DOI={10.5065/D6KW5D8M}}
 
+@article{Blacketal2017,
+author = {Black, P. and L. Harrison and M. Beaubien and R. Bluth and R. Woods and A. Penny and R. W. Smith and J. D. Doyle},
+title = {{High definition sounding system (HDSS) for atmospheric profiling}},
+journal = JAOT,
+year = {2017},
+volume = {34},
+pages = {777-796}
+}
+
+@article{Braunetal2016,
+author = {Braun, S. A. and P. A. Newman and G. M. Heymsfield},
+title = {{NASA's Hurricane and Severe Storm Sentinel (HS3) Investigation}},
+journal = BAMS,
+year = {2016},
+volume = {97},
+pages = {2085-2102}
+}
+
 @article{BryanRotunno2009,
 author = {Bryan, George H. and Rotunno, Richard},
 title = {{The maximum intensity of tropical cyclones in axisymmetric numerical model simulations}},
-journal = {Mon. Wea. Rev.},
+journal = MWR,
 year = {2009},
 volume = {137},
 number = {6},
@@ -137,6 +155,15 @@ number = {10},
 pages = {2113-2134}
 }
 
+@article{Dunion2011,
+author = {Dunion, J. P.},
+year = {2011},
+title = {Rewriting the climatology of the tropical North Atlantic and Caribbean Sea atmosphere},
+journal = JCLI,
+volume = {24},
+pages = {893-908}
+}
+
 @article{Dunionetal2014,
 author = {Dunion, J. P. and C. D. Thorncroft and C. S. Velden},
 year = {2014},
@@ -145,6 +172,16 @@ journal = MWR,
 volume = {142},
 pages = {3900-3919}
 }
+
+@article{DuranMolinari2016,
+author = {Duran, P. and J. Molinari},
+year = {2016},
+title = {{Upper-tropospheric low Richardson number in tropical cyclones: Sensitivity to cyclone intensity and the diurnal cycle}},
+journal = JAS,
+volume = {73},
+pages = {545-554}
+}
+
 
 @article{DuranMolinari2018,
 author = {Duran, Patrick and J. Molinari},
@@ -174,6 +211,15 @@ volume = {69},
 pages = {988-996}
 }
 
+@article{HockFranklin1999,
+author = {Hock, T. F. and J. L. Franklin},
+year = {1999},
+title = {{The NCAR GPS dropwindsonde}},
+journal = BAMS,
+volume = {80},
+pages = {407-420}
+}
+
 @article{Iacono,
 author = {Iacono, M. J. and J. S. Delamere and E. J. Mlawer and M. W. Shephard and S. A. Clough and W. D. Collins},
 year = {2008},
@@ -181,6 +227,15 @@ title = {Radiative forcing by long-lived greenhouse gases: Calculations with the
 journal = JGR,
 volume = {113},
 number = {D13103}
+}
+
+@article{Jordan1958,
+author = {Jordan, C. L.},
+year = {1958},
+title = {{Mean soundings for the West Indes area}},
+journal = JM,
+volume = {15},
+pages = {91-97}
 }
 
 @article{Kepertetal2016,
@@ -217,6 +272,15 @@ volume = {145},
 pages = {1339-1359}
 }
 
+@article{Lazzaraetal1999,
+author = {Lazzara, M. A. and J. M. Benson and R. J. Fox and D. J. Laitsch and J. P. Rueden and D. A. Santek and T. M. Whittaker and J. T. Young},
+year = {1999},
+title = {{The Man Computer Interactive Data Access System: 25 years of interactive processing}},
+journal = BAMS,
+volume = {80},
+pages = {271-287}
+}
+
 @article{MarkowskiBryan2016,
 author = {Markowski, P. M. and G. H. Bryan},
 year = {2016},
@@ -224,6 +288,24 @@ title = {{LES} of laminar flow in the {PBL}: A potential problem for convective 
 journal = MWR,
 volume = {144},
 pages = {1841-1850}
+}
+
+@article{Molinarietal,
+author = {Molinari, J. and P. Duran and D. Vollaro},
+year = {2014},
+title = {{Low Richardson number in the tropical cyclone outflow layer}},
+journal = JAS,
+volume = {71},
+pages = {3164-3179}
+}
+
+@article{MolinariVollaro2010,
+author = {Molinari, J. and D. Vollaro},
+year = {2010},
+title = {{Distribution of helicity, CAPE, and shear in tropical cyclones}},
+journal = JAS,
+volume = {67},
+pages = {274-284}
 }
 
 @article{OhnoSatoh2015,
@@ -279,4 +361,11 @@ title = {{Convection-permitting simulations of the environment supporting widesp
 journal = MWR,
 volume = {137},
 pages = {1972-1990}
+}
+
+@misc{Wyoming2016,
+author = {{University of Wyoming}},
+year = {2016},
+title = {{Atmospheric Soundings. University of Wyoming, accessed 6 April 2016}},
+note = {{\url{http://www2.mmm.ucar.edu/people/bryan/cm1/cm1_equations.pdf}}}
 }
