--- a/dissertation.tex
+++ b/dissertation.tex
@@ -37,6 +37,7 @@
 %\include{chapter}
 %\include{chapter2}
 %\include{chapter3}
+\include{patricia}
 \include{modeling}
 %\include{conclusions}
 % ...
