--- a/modeling.tex
+++ b/modeling.tex
@@ -17,7 +17,7 @@ Numerical simulations of an axisymmetric hurricane conducted in an idealized fra
 Using these simulations, some physical insight into these mechanisms is obtained and described in the present chapter.
 
 %---------------------------------------------------------------------------------------%
-\section{Model Setup}
+\section{Model setup}
 %---------------------------------------------------------------------------------------%
 
 The numerical simulations were performed using version 19.4 of Cloud Model 1 (CM1) described in \cite{BryanRotunno2009}.
@@ -39,7 +39,7 @@ After this RI, the storm continued to intensify more slowly until the maximum 10
 Hurricane Patricia (red stars) exhibited a similar intensity evolution prior to its landfall, with an RI period leading to a maximum 10-m wind speed of 95 m s\textsuperscript{-1} and a minimum sea-level pressure of 872 hPa.
 
 %---------------------------------------------------------------------------------------%
-\section{Budget Computation}
+\section{Budget computation}
 %---------------------------------------------------------------------------------------%
 The static stability can be expressed as the squared Brunt-V{\"a}is{\"a}l{\"a} frequency:
    \begin{equation} \label{eq:n2moist}
